k8s/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hw6-service
spec:
  type: NodePort
  selector:
    app: hw6
  ports:
    - name: hw6
      protocol: TCP
      port: 80
      targetPort: 8080
